# Statlyn

./: .editorconfig  .gitignore  README.md  Statlyn.sln
Statlyn.Analytics/: DecisionEngineModels.cs  DecisionEngines.cs  EvidenceItem.cs  RecruitmentRecommendation.cs  RedFlag.cs  RedFlagOperator.cs  RoleModel.cs  RoleScore.cs  RoleScoringEngine.cs  Statlyn.Analytics.csproj
Statlyn.Api/: Dtos.cs  Program.cs  Statlyn.Api.csproj  StatlynApiDtoFactory.cs
Statlyn.Core/: BlockedFieldNotice.cs  DataCompleteness.cs  FieldDecisionKind.cs  FieldInstanceKey.cs  FieldPolicy.cs  FieldPolicyRegistry.cs  FieldValueKind.cs  FieldVisibilityCategory.cs  FieldVisibilityDecision.cs  FieldVisibilityEvaluator.cs  FootballAttributeSet.cs  MaskedPlayer.cs  MatchSnapshot.cs  PlayerFieldKey.cs  PlayerImageReference.cs  PlayerRawSnapshot.cs  PlayerStatSnapshot.cs  ProviderType.cs  RawFieldValue.cs  ScoutContext.cs  ScoutingReportSnapshot.cs  SnapshotResult.cs  SourceContext.cs  SourceMetadata.cs  TeamSnapshot.cs  VisibleField.cs  VisiblePlayerField.cs
Statlyn.Data/: LocalDataSourceRecord.cs  RuntimeDatabaseFactory.cs  Statlyn.Data.csproj  StatlynDatabaseDiagnostics.cs  StatlynDatabaseInitializer.cs  StatlynDatabasePathResolver.cs  StatlynDatabaseSchema.cs  StatlynDbConnectionFactory.cs  StatlynMigrationRunner.cs  (+1 more)
Statlyn.Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Statlyn.Desktop/src-tauri/src/: lib.rs  main.rs
Statlyn.NativeConnector/: CMakeLists.txt
Statlyn.NativeConnector/include/: StatlynNativeConnector.h
Statlyn.NativeConnector/src/: StatlynNativeConnector.cpp
(+299 files in other folders)
