[package]
name = "statlyn-desktop"
version = "0.1.0"
description = "Statlyn professional football recruitment intelligence desktop workspace"
authors = ["Statlyn"]
edition = "2021"

[lib]
name = "statlyn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
